MM-TECH: fixed z-index issue.

--- a/src/styles/components/navigation.less
+++ b/src/styles/components/navigation.less
@@ -5,7 +5,7 @@
 
 .nav {
   position: fixed;
-  z-index: 3;
+  z-index: 6;
   top: 0;
   left: 0;
   bottom: 0;
